--- a/style.css
+++ b/style.css
@@ -20,6 +20,56 @@ body
     font-family: var(--font);
 }
 
+/* sessão principal (main section) */
+.main
+{
+    background-image: url("./img/Background.png");  
+    background-repeat: no-repeat; 
+    background-size: contain; 
+    margin: 0 5rem;    
+    align-items: center;
+    text-align: center;
+}
 
+.main__title
+{
+    font-size: 28px;
+    font-weight: 700;
+}
+
+.main__image
+{
+    margin: 1.5em 0 2em 0;
+}
+
+.container
+{
+    height: 100vh;
+    display: grid;
+    grid-template-columns: 50% 50%;    
+}
+
+.main__button
+{
+    background-color: var(--button-color);
+    border-radius: 7px;
+    padding: 1em;
+    color: var(--light-color);
+    text-decoration: none;
+    display: block;
+    margin-bottom: 1em;
+}
+
+.transparent
+{
+    background-color: transparent;
+    border: 1px solid var(--light-color);
+}
+
+.main__warning
+{
+    font-size: 12px;
+    color: var(--warning-color);
+}
 
 
