--- a/style.css
+++ b/style.css
@@ -136,4 +136,28 @@ body
     font-size: 32px;
 }
 
+/* rodapé (footer) */
+.footer
+{
+    text-align: center;
+    padding: 0 6em 2em 6em;
+}
 
+.footer__list
+{
+    margin: 2em 0;
+    display: flex;
+    justify-content: space-around;
+}
+
+.footer__list-item
+{
+    color: var(--light-color);
+}
+
+.footer__text
+{
+    font-size: 14px;
+    color: var(--warning-color);
+    margin-bottom: 2em;
+}
